--- a/.gitignore
+++ b/.gitignore
@@ -78,8 +78,20 @@ nb-configuration.xml
 ##############################
 ## Visual Studio Code
 ##############################
-.vscode/
+.vscode
+.vscode
 .code-workspace
+
+####################################################
+# VS Code files for those working on multiple tools
+####################################################
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
 
 ##############################
 ## OS X
