--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,25 @@ nb-configuration.xml
 *.zip
 *.tar.gz
 *.rar
+
+##############################
+## Node.js
+##############################
+# Ignorar la carpeta node completa
+node/
+# Ignorar archivos grandes como node.exe
+node/node.exe
+# Ignorar la carpeta node_modules
+node_modules/
+# Ignorar logs generados por npm o yarn
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+# Ignorar archivos binarios grandes
+*.exe
+*.dll
+*.bin
+# Ignorar cachés y archivos temporales
+.cache/
+.temp/
+*.tmp
