--- a/pom.xml
+++ b/pom.xml
@@ -41,12 +41,12 @@
     <scope>provided</scope>
 </dependency>
         <!-- Servlet API -->
-        <dependency>
+        <!-- <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
             <version>6.0.0</version>
             <scope>provided</scope>
-        </dependency>
+        </dependency> -->
 
         <!-- H2 Database -->
         <dependency>
@@ -101,6 +101,16 @@
             <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
+       <dependency>
+    <groupId>org.eclipse.jetty</groupId>
+    <artifactId>jetty-server</artifactId>
+    <version>9.4.43.v20210629</version>
+</dependency>
+<dependency>
+    <groupId>org.eclipse.jetty</groupId>
+    <artifactId>jetty-servlet</artifactId>
+    <version>9.4.43.v20210629</version>
+</dependency>
     </dependencies>
 
     <!-- Configuración de construcción -->
